--- a/students/templates/auth/login.html
+++ b/students/templates/auth/login.html
@@ -72,16 +72,17 @@
   <body class="text-center">
 
 <main class="form-signin w-100 m-auto">
-  <form>
+  <form method="post">
+    {% csrf_token %}
     <img class="mb-4" src="https://thumbs.dreamstime.com/z/mouse-hand-cursor-sign-button-vector-illustration-file-eps-format-35103559.jpg" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
     <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-      <label for="floatingInput">Email address</label>
+      <input type="text" name="username" class="form-control" id="floatingInput">
+      <label for="floatingInput">Username</label>
     </div>
     <div class="form-floating">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+      <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password">
       <label for="floatingPassword">Password</label>
     </div>
 
@@ -91,7 +92,7 @@
       </label>
     </div>
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-    <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
+    <p class="mt-5 mb-3 text-muted">&copy; 2022</p>
   </form>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
