Signup view and some settings changed

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -32,8 +32,11 @@
         </div>
       </div>
     </header>
-    {% block content %}
-    {% endblock content %}
+    <br>
+    <div class="container">
+        {% block content %}
+        {% endblock content %}
+    </div>
     <footer>
         <span>&copy; esquiresword & ImmortalDante</span>
     </footer>
