--- a/students/templates/auth/signup.html
+++ b/students/templates/auth/signup.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'app/base.html'  %}
+{% block content %}
 
-</body>
-</html>
+<div class="shadow p-4 mb-5 bg-body rounded">
+  <h3>Registration</h3><br>
+  <form action="{% url 'signup' %}" method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <br>
+    <input type="submit" value="Submit" class="btn btn-outline-secondary">
+  </form>
+</div>
+
+{% endblock %}
