--- a/poster/templates/poster/add_theme.html
+++ b/poster/templates/poster/add_theme.html
@@ -2,6 +2,7 @@
 {% block content %}
 <form method="post" action="">
     {% csrf_token %}
+    {{ form.media }}
     {{ form }}<br>
     <input type="submit" value="Submit" class="btn btn-outline-secondary">
 </form>
