--- a/poster/templates/poster/add_theme.html
+++ b/poster/templates/poster/add_theme.html
@@ -1,9 +1,11 @@
 {% extends 'app/base.html' %}
 {% block content %}
-<form method="post" action="">
-    {% csrf_token %}
-    {{ form.media }}
-    {{ form }}<br>
-    <input type="submit" value="Submit" class="btn btn-outline-secondary">
-</form>
+<div class="p-4 mb-5 bg-body rounded">
+    <form method="post" action="">
+        {% csrf_token %}
+        {{ form.media }}
+        {{ form }}<br>
+        <input type="submit" value="Подтвердить" class="btn btn-outline-dark">
+    </form>
+</div>
 {% endblock %}
