--- a/students/templates/auth/redact.html
+++ b/students/templates/auth/redact.html
@@ -1,9 +1,11 @@
 {% extends 'app/base.html' %}
 {% block content %}
-<form action="" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <br>
-    <input type="submit" value="Update" class="btn btn-outline-secondary">
-</form>
+<div class="p-4 mb-5 bg-body rounded">
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <br>
+        <input type="submit" value="Обновить" class="btn btn-outline-dark">
+    </form>
+</div>
 {% endblock %}
