--- a/students/templates/auth/signup.html
+++ b/students/templates/auth/signup.html
@@ -1,13 +1,12 @@
 {% extends 'app/base.html'  %}
 {% block content %}
 
-<div class="shadow p-4 mb-5 bg-body rounded">
-  <h3>Registration</h3><br>
+<div class="p-4 mb-5 bg-body rounded">
   <form action="{% url 'signup' %}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <br>
-    <input type="submit" value="Submit" class="btn btn-outline-secondary">
+    <input type="submit" value="Подтвердить" class="btn btn-outline-dark">
   </form>
 </div>
 
