--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -14,7 +14,7 @@
                     <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
                 </a>
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="#" class="nav-link px-2 text-white">Главная</a></li>
+                <li><a href="{% url 'home' %}" class="nav-link px-2 text-white">Главная</a></li>
                 {% if user.is_authenticated %}
                 <li><a href="#" class="nav-link px-2 text-white">Профиль</a></li>
                 {% endif %}
@@ -25,10 +25,10 @@
             </form>
             <div class="text-end">
                 {% if not user.is_authenticated %}
-                <button type="button" class="btn btn-outline-light me-2">Войти</button>
-                <button type="button" class="btn btn-outline-warning">Регистрация</button>
+                <a href="{% url 'user_login' %}"><button type="button" class="btn btn-outline-light me-2">Войти</button></a>
+                <a href="{% url 'signup' %}"><button type="button" class="btn btn-outline-warning">Регистрация</button></a>
                 {% else %}
-                <button type="button" class="btn btn-outline-warning">Выйти</button>
+                <a href="{% url 'logout_user' %}"><button type="button" class="btn btn-outline-warning">Выйти</button></a>
                 {% endif %}
             </div>
         </div>
@@ -40,7 +40,7 @@
         {% endblock content %}
         <footer>
             <center>
-                <span class="text-white">&copy; esquiresword & ImmortalDante</span>
+                <span class="text-white">&copy; esquiresword & ImmortalDante</span><br>
             </center>
         </footer>
     </div>
