--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -5,16 +5,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <style>
+        .bg-dark {
+            background-color: #17191f !important;
+        }
+        .text-bg-dark {
+            background-color: #22242b !important;
+            box-shadow: 0 0 10px rgba(0,0,0,0.2);
+        }
+        .background-border {
+            min-height: 630px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.2);
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            padding: 0 !important;
+        }
+        .left-part {
+            width: calc(100% - 270px);
+            max-width: calc(100% - 270px);
+            display: inline-block;
+            background: #22242b;
+            border-radius: 10px;
+        }
+        .right-part {
+            display: inline-block;
+            width: 250px;
+            background: #22242b;
+            border-radius: 10px;
+        }
+        .logo-text-1 {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 30px;
+            font-weight: bold;
+            display: inline;
+        }
+        .logo-text-2 {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 30px;
+            font-weight: bold;
+            background-color: #ffc107 !important;
+            display: inline;
+            border-radius: 7px;
+            color: #17191f;
+            padding: 0 7px;
+        }
+        .p-3 {
+            padding: 0.6rem !important;
+        }
+    </style>
 </head>
 <body class="bg-dark">
-    <header class="p-3 text-bg-dark">
+    <header class="p-3 text-bg-dark custom-color">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
                     <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
                 </a>
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="{% url 'home' %}" class="nav-link px-2 text-white">Главная</a></li>
+                <li><a href="{% url 'home' %}" class="nav-link px-2 text-white"><p class="logo-text-1">BSUIR</p> <p class="logo-text-2">hub</p></a></li>
                 {% if user.is_authenticated %}
                 <li><a href="#" class="nav-link px-2 text-white">Профиль</a></li>
                 {% endif %}
@@ -35,15 +84,23 @@
       </div>
     </header>
     <br>
-    <div class="container">
-        {% block content %}
-        {% endblock content %}
-        <footer>
+    <div class="container background-border">
+        <div class="left-part">
+            {% block content %}
+            {% endblock content %}
+        </div>
+        <div class="right-part">
+            {% block side_content %}
+            {% endblock side_content %}
+        </div>
+    </div>
+    <br>
+    <footer>
             <center>
                 <span class="text-white">&copy; esquiresword & ImmortalDante</span><br>
             </center>
-        </footer>
-    </div>
+    </footer>
+    <br>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
