--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>BSUIR</title>
+    <title>BSUIR HUB - форум студентов</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -63,7 +63,7 @@
                     <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
                 </a>
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="{% url 'home' %}" class="nav-link px-2 text-white"><p class="logo-text-1">BSUIR HUB - форум студентов</p> <p class="logo-text-2">hub</p></a></li>
+                <li><a href="{% url 'home' %}" class="nav-link px-2 text-white"><p class="logo-text-1">BSUIR hub</p> <p class="logo-text-2">hub</p></a></li>
                 {% if user.is_authenticated %}
                 <li><a href="#" class="nav-link px-2 text-white">Профиль</a></li>
                 {% endif %}
