tab title updated

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -63,7 +63,7 @@
                     <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
                 </a>
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="{% url 'home' %}" class="nav-link px-2 text-white"><p class="logo-text-1">BSUIR hub</p> <p class="logo-text-2">hub</p></a></li>
+                <li><a href="{% url 'home' %}" class="nav-link px-2 text-white"><p class="logo-text-1">BSUIR</p> <p class="logo-text-2">hub</p></a></li>
                 {% if user.is_authenticated %}
                 <li><a href="#" class="nav-link px-2 text-white">Профиль</a></li>
                 {% endif %}
