--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -20,8 +20,8 @@
             padding: 0 !important;
         }
         .left-part {
-            width: calc(100% - 270px);
-            max-width: calc(100% - 270px);
+            width: 100%;
+            max-width: 100%;
             display: inline-block;
             background: #22242b;
             border-radius: 10px;
@@ -32,6 +32,7 @@
             width: 250px;
             background: #22242b;
             border-radius: 10px;
+            min-height: 100px;
         }
         .logo-text-1 {
             font-family: Arial, Helvetica, sans-serif;
@@ -68,6 +69,13 @@
             .container{
                 max-width: 1175px;
             }
+        }
+        .link-color {
+            color: white;
+            text-decoration: none;
+        }
+        a:hover{
+            color: white;
         }
     </style>
 </head>
