--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -87,7 +87,7 @@
                 <li><a href="{% url 'home' %}" class="nav-link px-2 text-white"><p class="logo-text-1">BSUIR</p> <p class="logo-text-2">hub</p></a></li>
             </ul>
             {% if user.is_authenticated %}
-                <a href="#" class="nav-link px-2 text-white" style="margin-right: 0.6rem; font-size: 1.2rem;"><i class="fa-solid fa-user"></i></a>
+                <a href="{% url 'profile' %}" class="nav-link px-2 text-white" style="margin-right: 0.6rem; font-size: 1.2rem;"><i class="fa-solid fa-user"></i></a>
             {% endif %}
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
                 <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Поиск..." aria-label="Search">
@@ -105,6 +105,16 @@
       </div>
     </header>
     <br>
+    <div class="container">
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    <i class="fa-solid fa-triangle-exclamation"></i> {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            {% endfor %}
+        {% endif %}
+    </div>
     {% block content %}
     {% endblock %}
     <br>
