--- a/students/templates/auth/login.html
+++ b/students/templates/auth/login.html
@@ -70,7 +70,14 @@
     <link href="signin.css" rel="stylesheet">
   </head>
   <body class="text-center">
-
+{% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <i class="fa-solid fa-triangle-exclamation"></i> {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        {% endfor %}
+    {% endif %}
 <main class="form-signin w-100 m-auto">
   <form method="post">
     {% csrf_token %}
